# aurora-rss-reader

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT_SUMMARY.md  Dockerfile  FRONTEND_CHANGES.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  README_EN.md  README_ZH.md  RELEASE_NOTES_v0.1.0.md  RSSHUB_CONFIG_GUIDE.md  RSSHUB_TROUBLESHOOTING.md  RSS_TIME_PARSING.md  UI.md  UPDATE_README.md  bug记录.md  build-app.sh  build-release-app.sh  build-rust-release-app.sh  build_signature.json  debug_frontend_test.py  docker-compose.yml  environment_report.md  follow.opml  start.sh  test_final_solution.html  test_rsshub_backend.html  test_rsshub_frontend.html  todolist.md  优化记录.md  右侧全文翻译逻辑设计.md  向量模式.md  项目细节与设计.md
backend/: .env.example  .gitignore  =0.2  README.md  add_column.py  aurora-backend.spec  backend.spec  check_settings_storage.py  diagnose_rsshub.py  manage_rsshub.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_db.py  test_feeds.py  test_rsshub_config.py
backend/Aurora RSS Reader/: python_alive.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: create_rsshub_tables.py  create_user_settings_table.py  deps.py  models.py  session.py
backend/app/models/: rsshub_config.py  user_settings.py
backend/app/schemas/: ai.py  entry.py  feed.py
backend/app/services/: ai.py  feed_config.py  fetcher.py  rsshub_defaults.py  rsshub_manager.py  rsshub_test_service.py  translation_engine.py  user_settings_service.py
backend/app/utils/: network.py  text.py
backend/migrations/: env.py
backend/migrations/versions/: 2ee599331b61_add_title_translations.py  774a0dde0900_initial_schema.py
backend/rss_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: add_test_feeds.py  fix_future_times.py  migrate.py  serve.py  test_translation.py  update_db_schema.py  update_default_fetch_interval.py  update_missing_times.py
backend/tests/: test_rsshub_manager.py  test_text_utils.py  test_user_settings_schema.py
rust-backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODOLIST.md  build-all.sh  build.sh  config.toml.example  docker-compose.yml  test_opml.xml
rust-backend/src/: database.rs  lib.rs  main.rs
rust-backend/src/config/: mod.rs
rust-backend/src/database/: migrations.rs
rust-backend/src/handlers/: ai.rs  entries.rs  feeds.rs  icons.rs  mod.rs  opml.rs  rsshub.rs  settings.rs  tasks.rs
rust-backend/src/models/: entry.rs  feed.rs  fetch_log.rs  mod.rs  rsshub_config.rs  rsshub_config_entity.rs  site_icon.rs  site_icon_entity.rs  summary.rs  translation.rs  user_settings.rs
rust-backend/src/services/: ai.rs  ai_service.rs  fetcher.rs  icon_service.rs  mod.rs  opml_service.rs  rsshub_manager.rs  task_scheduler.rs  translation_engine.rs  user_settings_service.rs
rust-backend/tests/: README.md  feeds_tests.rs  icon_service_tests.rs  integration_tests.rs  opml_service_tests.rs  task_scheduler_tests.rs
(+278 files in other folders)
